--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "scripts": {
     "dev:server": "NODE_PATH=./:server DEBUG=server:* nodemon server/bin/www",
+    "start": "npm run server",
     "server": "NODE_PATH=./:server DEBUG=server:* node server/bin/www",
-    "pm2": "pm2 start server/bin/www"
+    "prod": "pm2 start ecosystem.config.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
